# basic-server-app

./: Cargo.toml
entity/: Cargo.toml
entity/src/: user.rs
migration/src/: lib.rs  m20250603_201305_create_user_table.rs
src/: main.rs
src/routes/: auth_routes.rs  home_routes.rs  mod.rs  user_routes.rs
src/routes/handlers/: auth_hanlders.rs  home_handler.rs  mod.rs  user_handlers.rs
src/routes/middlewares/: auth_middleware.rs
src/utils/: api_response.rs  constants.rs  jwt.rs
