[package]
name = "basic-server-app"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
actix-web = "4.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
env_logger = "0.11.8"
dotenv = "0.15.0"
lazy_static = "1.4.0"
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }